--- a/ClientApp/src/app/modules/payment/lumpsum/lumpsum.component.html
+++ b/ClientApp/src/app/modules/payment/lumpsum/lumpsum.component.html
@@ -1,1 +1,70 @@
-<p>lumpsum works!</p>
+
+
+<div class="container-fluid">
+  <div class="card mb-4 list-card">
+    <div class="card-header">
+      <h4 class="float-left">Lumpsum Payment List</h4>
+      <a href="javascript:void(0)" (click)="addLumpsumPopup(null)" class="btn  btn-primary float-right">Add Lumpsum</a>
+    </div>
+    <div class="card-body">
+      <!--table listing statrt hover-->
+      <div id="no-more-tables">
+        <!-- This id used for responsive table -->
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table row-border hover">
+          <thead>
+            <tr>
+              <th style="width: 10%;">Voucher No</th>
+              <th style="width: 20%;">Voucher Date</th>
+              <th style="width: 30%;">Company Name</th>
+              <th style="width: 20%;">Service Amt</th>
+              <th style="width: 20%;" class="text-center actions-td cursor">Action</th>
+            </tr>
+          </thead>
+          <tbody *ngIf="lumpsums?.length != 0">
+            <tr *ngFor="let _lumpsum of lumpsums">
+              <td data-title="Voucher No">{{ _lumpsum.lumpsumId }}</td>
+              <td data-title="Voucher Date">{{ _lumpsum.lumpsumDate | date:'dd/MM/yyyy'}}</td>
+              <td data-title="Company Name">{{ _lumpsum.customerName }}</td>
+              <td data-title="Service Amount">{{ _lumpsum.paidAmount }} /-</td>
+              <td data-title="Actions" class="action text-center actions-td">
+                <div class="d-flex justify-content-center">
+                  <a href="javascript:void(0)">
+                    <i class="far fa-edit orange" placement="top"
+                       ngbTooltip="Edit" (click)="addLumpsumPopup(_lumpsum)"></i>
+                  </a>
+                  <a href="javascript:void(0)">
+                    <i class="fas fa-print orange" placement="top"
+                       ngbTooltip="Lumpsum Print" (click)="printLumpsum(_lumpsum.lumpsumId)"></i>
+                  </a>
+                  <a href="javascript:void(0)">
+                    <i class="far fa-trash-alt orange" placement="top"
+                       ngbTooltip="Delete" (click)="openDelete(content,_lumpsum)"></i>
+                  </a>
+                </div>
+              </td>
+            </tr>
+            <tr *ngIf="lumpsums?.length == 0">
+              <td colspan="12" class="no-data-available">No Records Found!</td>
+            </tr>
+          </tbody>
+        </table>
+        <!--table listing end-->
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title"><i class="icon-select"></i> Confirm</h4>
+  </div>
+  <div class="modal-body">
+    <p class="text-center">Are you sure, you want to delete?</p>
+  </div>
+  <div class="modal-footer no-top-border">
+    <button type="button" class="btn btn-primary" (click)="modal.close(true)">OK</button>
+    <button type="button" class="btn btn-secondary" (click)="modal.close(false)">Cancel</button>
+  </div>
+</ng-template>
