--- a/ClientApp/src/app/shared/sidebar/sidebar.component.html
+++ b/ClientApp/src/app/shared/sidebar/sidebar.component.html
@@ -107,6 +107,14 @@
             <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="reports/outward-report"
                routerLinkActive="active"><i class="fas fa-circle"></i> Outward Reports</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="reports/inward-report"
+               routerLinkActive="active"><i class="fas fa-circle"></i> Inward Reports</a>
+          </li> <li class="nav-item">
+            <a class="nav-link" (click)="deviceSidemenuCollapse()" routerLink="reports/client-outstanding-report"
+               routerLinkActive="active"><i class="fas fa-circle"></i> Client O/S Reports</a>
+          </li>
+
         </ul>
       </div>
     </li>
@@ -128,7 +136,7 @@
       </div>
     </li>
 
-    
+
 
   </ul>
   <div class="fold-menu-on-desktop">
